--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 # generated files
 bin/
 gen/
+idea/
+build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -27,4 +29,5 @@ proguard/
 *.ipr
 *.iws
 .idea/
+.gradle
 
