--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="org.bean.jandan"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="org.bean.jandan"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 网络相关 -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -31,6 +32,11 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.PictureActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
     </application>
 
