--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -35,9 +36,13 @@
         </activity>
         <activity
             android:name=".activity.PictureActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden">
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".activity.CommentsActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
