--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:name=".activity.CommentsActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"/>
+
+        <activity
+            android:name=".activity.AboutActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/action_about"/>
     </application>
 
 </manifest>
