--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 buildscript {
     repositories {
-        jcenter {
-            url "http://jcenter.bintray.com/"
-        }
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+//        classpath 'com.android.tools.build:gradle:1.1.0'
 
+        classpath "com.android.tools.build:gradle:1.2.3"
+        classpath 'com.android.databinding:dataBinder:1.0-rc0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,8 +16,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter {
-            url "http://jcenter.bintray.com/"
-        }
+        jcenter()
     }
 }
