--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.facebook.fresco:fresco:0.4.0'
+    compile 'com.ogaclejapan.smarttablayout:library:1.1.3@aar'
 }
