--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.facebook.fresco:fresco:0.4.0'
     compile 'com.ogaclejapan.smarttablayout:library:1.1.3@aar'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
